--- a/ecommerce-back-end/.env
+++ b/ecommerce-back-end/.env
@@ -2,3 +2,4 @@ PORT = 2000
 MONGO_DB_USER = achyuttiwari34
 MONGO_DB_PASSWORD = connection
 MONGO_DB_DATABASE = ecommerce
+JWT_SECRET = ACHYUTSECRET
